# only-talk-rs

./: .env.example  .gitignore  Cargo.toml  FILE_PATH_STORED_NAME_FIX.md  LICENSE  README.en.md  README.md  README_EN.md  S3_TROUBLESHOOTING.md  clippy.toml  rustfmt.toml  test_s3_connection.sh
api/: Cargo.toml
api/src/: init_server.rs  lib.rs
api/src/controller/: mod.rs  upload_file_integrated_controller.rs  user_integrated_controller.rs
api/src/service/: mod.rs  upload_file_integrated_service.rs  user_integrated_service.rs
crates/api/: Cargo.toml
crates/api/src/: init_server.rs
crates/api/src/controller/: upload_file_integrated_controller.rs  user_integrated_controller.rs
crates/api/src/service/: upload_file_integrated_service.rs  user_integrated_service.rs
crates/common/: Cargo.toml
crates/common/src/: config_manager.rs  config_str.rs  lib.rs  tracing.rs
crates/common/src/marcos/: mod.rs  read_config.rs
crates/common/src/utils/: fatal_error.rs  group_msg.rs  internal_quic_client.rs  internal_quic_msg.rs  jwt_util.rs  message_types.rs  mod.rs  redis_utils.rs  rsa_util.rs  server_count_sync.rs  sql_utils.rs  text_msg.rs  time.rs  validators.rs
crates/common/tests/: config_manager_test.rs
crates/email_service/: Cargo.toml
crates/email_service/examples/: basic_usage.rs  batch_send.rs  with_attachments.rs
crates/email_service/src/: error.rs  lib.rs  pool.rs
crates/email_service/src/config/: mod.rs  provider_config.rs
crates/email_service/src/manager/: email_manager.rs  provider_pool.rs
crates/email_service/src/models/: attachment.rs  email.rs  email_address.rs  mod.rs  send_result.rs
crates/email_service/src/providers/: mod.rs  retry_strategy.rs
crates/email_service/src/providers/implementations/: aliyun.rs  aws_ses.rs  mod.rs  smtp.rs  tencent.rs
crates/email_service/tests/: attachment_test.rs  email_address_test.rs  email_test.rs  error_test.rs  retry_strategy_test.rs
crates/entity/: Cargo.toml
crates/entity/ddl/: README.md  SCRIPTS_README.md  basic_user.sql  basic_user_salt.sql  chat_biz_record.sql  chat_message_record.sql  chat_message_record_fail.sql  chat_message_record_read.sql  create_tables.ps1  create_tables.sh  fix_file_path_stored_name_inconsistency.sql  friend_list.sql  group_invitation.sql  group_message_record_read.sql  group_tables.sql  sequences.sql  user_cache.sql  user_login_log.sql
crates/entity/src/: config_str.rs  lib.rs
crates/entity/src/marcos/: read_config.rs
crates/entity/src/models/: internal_quic_msg.rs  mod.rs
crates/entity/src/models/chat_entity/: chat_list_link.rs  chat_message_record.rs
crates/entity/src/models/file_entity/: biz_file_link.rs  biz_record.rs  mod.rs
crates/entity/src/models/group_entity/: group_info.rs  group_invitation.rs  group_member.rs  group_message_read.rs  group_message_record.rs  mod.rs
crates/entity/src/models/user_entity/: basic_user.rs  basic_user_salt.rs  mod.rs  user_info.rs
crates/entity/src/utils/: internal_quic_client.rs  message_types.rs  mod.rs  rsa_util.rs  sql_utils.rs
crates/quic_service/: Cargo.toml
crates/quic_service/benches/: text_msg_bench.rs
crates/quic_service/src/: chat_node.rs  config.rs  init_server.rs  internal_config.rs  internal_quic_server.rs  internal_router.rs  lib.rs  lifecycle.rs  quic_client.rs  quic_server.rs  set_server.rs  state.rs  tls_monitor.rs
crates/quic_service/src/internal/: internal_config.rs  internal_quic_server.rs  internal_router.rs  mod.rs
crates/quic_service/src/models/: first_quic_msg.rs  quic_connection.rs  text_msg.rs
crates/quic_service/src/msg_service/: group_msg_service.rs  mod.rs  process_msg_service.rs  send_msg.rs  text_msg_service.rs
crates/quic_service/src/nat_ip/: mod.rs  model.rs  nat_udp_service.rs
crates/quic_service/src/p2p_service/: p2p_udp_service.rs
crates/s3_service/: Cargo.toml  TEST_SUMMARY.md  run_tests.ps1  run_tests.sh
crates/s3_service/examples/: check_bucket_policy.rs  list_bucket_files.rs  s3_diagnose.rs  set_bucket_public.rs  set_bucket_public_prod.rs
crates/s3_service/src/: client.rs  config.rs  error.rs  lib.rs  storage.rs  tests.rs
crates/s3_service/src/operations/: bucket.rs  copy_move.rs  delete.rs  download.rs  list.rs  metadata.rs  mod.rs  multipart.rs  presigned.rs  upload.rs
crates/s3_service/tests/: README.md  minio_integration_test.rs
http_service/: Cargo.toml
http_service/src/: lib.rs
http_service/src/common/dto/: base_page_dto.rs
http_service/src/http_service/: init_server.rs  mod.rs
http_service/src/http_service/chat_service/: mod.rs
http_service/src/http_service/chat_service/controller/: mod.rs  text_msg_controller.rs
http_service/src/http_service/chat_service/service/: text_msg_service.rs
http_service/src/http_service/chat_service/vo/: chat_list_link_vo.rs  mod.rs
http_service/src/http_service/file_service/: mod.rs
http_service/src/http_service/file_service/controller/: file_controller.rs  s3_controller.rs
http_service/src/http_service/file_service/model/: mod.rs
http_service/src/http_service/file_service/service/: avatar_s3_service.rs  biz_service.rs  chat_biz_service.rs  chat_s3_service.rs  file_service.rs  mod.rs  s3_file_service.rs
http_service/src/http_service/file_service/vo/: biz_file_link_vo.rs  biz_record_vo.rs  mod.rs
http_service/src/http_service/integrated_service/: mod.rs
http_service/src/http_service/integrated_service/controller/: mod.rs  user_integrated_controller.rs
http_service/src/http_service/notify_service/: controller.rs  mod.rs
http_service/src/http_service/user_service/: mod.rs
http_service/src/http_service/user_service/dto/: friend_dto.rs  (+4 more)
http_service/src/utils/: file_utils.rs  http_marcos.rs  http_response.rs  mod.rs  record_bad_http.rs
quic_service/: Cargo.toml  QUIC_SERVICE.md
quic_service/src/: init_server.rs  lib.rs  quic_client.rs  quic_server.rs  set_server.rs
quic_service/src/models/: first_quic_msg.rs  mod.rs  quic_connection.rs  text_msg.rs
quic_service/src/msg_service/: mod.rs  process_msg_service.rs  send_msg.rs  text_msg_service.rs
quic_service/src/p2p_service/: model.rs
(+311 files in other folders)
