[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
http_service = { path = "../http_service" }
port_service = { path = "../port_service" }
quic_service = { path = "../quic_service" }
entity = { path = "../entity" }
serde = { workspace = true }
rbatis = { workspace = true }
validator = { workspace = true }
anyhow = { workspace = true }
rbs = { workspace = true }
log = { workspace = true }
toml = { workspace = true }
actix-files = { workspace = true }
actix-web = { workspace = true }
deadpool-redis = { workspace = true }
rustls-pemfile = { workspace = true }
rbdc-pg = { workspace = true }
rbdc-pool-fast = { workspace = true }
redis = { workspace = true }
rustls = { workspace = true }
serde_json = { workspace = true }
lazy_static = { workspace = true }
uuid = { workspace = true }


