[package]
name = "quic_service"
version = "0.1.0"
edition = "2024"

[dependencies]
entity = { path = "../entity" }
serde = { workspace = true }
rbatis = { workspace = true }
validator = { workspace = true }
anyhow = { workspace = true }
rbs = { workspace = true }
log = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
lazy_static = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
nanoid = { workspace = true }
crc = { workspace = true }
crc-catalog = { workspace = true }
bincode = { workspace = true }
toml = { workspace = true }
deadpool-redis = "0.18.0"