[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
entity = { path = "../entity" }
quinn = { workspace = true }
rustls = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
rbatis = { workspace = true }
rbdc-pg = { workspace = true }
rbdc-pool-fast = { workspace = true }
anyhow = { workspace = true }
rbs = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["local-time"] }
tracing-appender = { workspace = true }
lazy_static = { workspace = true }
tokio = { workspace = true }
deadpool-redis = { workspace = true }
jsonwebtoken = { workspace = true }
rsa = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
dashmap = "6.1"
