[package]
name = "entity"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
rbatis = { workspace = true }
validator = { workspace = true }
anyhow = { workspace = true }
rbs = { workspace = true }
tracing = { workspace = true }
lazy_static = { workspace = true }
tokio = { workspace = true }
deadpool-redis = { workspace = true }
jsonwebtoken = { workspace = true }
rsa = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
dashmap = "6.1"