[package]
name = "s3_service"
version = "0.1.0"
edition = "2024"

[features]
default = []
integration-test = []

[dependencies]
entity = { path = "../entity" }
aws-sdk-s3 = "1"
aws-config = "1"
aws-credential-types = "1"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
futures-util = "0.3"
bytes = "1"

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.11", features = ["json"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
